--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -28,11 +28,10 @@
     }
 
     @include on-desktop {
-      width: 718px;
-      height: 673px;
+      width: 100%;
+      height: 100%;
       top: 178px;
-      left: 0;
-      transform: translateX(281px);
+      left: 52%;
     }
   }
 
@@ -65,12 +64,7 @@
     }
   }
 
-  &__container-stats {
-
-  }
-
   &__title {
-
     position: relative;
     z-index: 2;
     grid-column: 1 / -1;
