--- a/src/styles/blocks/home-page.scss
+++ b/src/styles/blocks/home-page.scss
@@ -21,7 +21,6 @@
 
     @include on-desktop {
       max-width: 1112px;
-      min-width: 1112px;
       padding-bottom: 152px;
     }
   }
@@ -75,7 +74,6 @@
     }
 
     @include on-desktop {
-      min-width: 1112px;
       font-size: 136px;
       letter-spacing: -6.8px;
       top: 316px;
@@ -137,7 +135,7 @@
 
     &:hover {
       background-color: #F9512E;
-      color: #FFFFFF;
+      color: #FFF;
     }
 
     &:hover .icon--cookie {
@@ -147,7 +145,7 @@
     &:focus {
       background-color: #B2341A;
       border-color: #B2341A;
-      color: #FFFFFF;
+      color: #FFF;
     }
 
     &:focus .icon--cookie {
