--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,12 +1,13 @@
 .page {
   scroll-behavior: smooth;
-  overflow-x: hidden;
   font-family: Inter, Arial, sans-serif;
+
+  &:has(.menu:target) {
+    overflow-y: hidden;
+  }
 
 
   &__body {
-    overflow: hidden;
-    box-sizing: border-box;
     margin: 0;
     min-width: 320px;
     background-color: #FFEEFC;
