--- a/src/styles/blocks/products-card.scss
+++ b/src/styles/blocks/products-card.scss
@@ -18,8 +18,8 @@
     }
 
     @include on-desktop {
-      width: 402px;
-      height: 512px;
+      width: 100%;
+      height: 100%;
     }
   }
 
