--- a/src/styles/blocks/call.scss
+++ b/src/styles/blocks/call.scss
@@ -30,5 +30,10 @@
     line-height: 150%;
     letter-spacing: -0.16px;
     color: #FFF;
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
