--- a/src/styles/blocks/nav-menu.scss
+++ b/src/styles/blocks/nav-menu.scss
@@ -18,6 +18,9 @@
   }
 
   &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
     color: #1C1A26;
     font-weight: 400;
@@ -25,11 +28,18 @@
     line-height: 150%;
     letter-spacing: -0.16px;
     text-align: center;
+
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__link--contact {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 4px;
     font-weight: 500;
     line-height: 100%;
