--- a/src/styles/blocks/blog.scss
+++ b/src/styles/blocks/blog.scss
@@ -3,6 +3,8 @@
   gap: 32px;
   grid-column: 1 / 2;
   padding-top: 40px;
+  transition: transform, 0.3s;
+
 
   @include on-tablet {
     padding-top: 48px;
