--- a/src/styles/blocks/email.scss
+++ b/src/styles/blocks/email.scss
@@ -28,11 +28,17 @@
   }
 
   &__link {
+    display: inline-block;
     text-decoration: none;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: -0.16px;
     color: #FFF;
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
