--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -39,6 +39,11 @@
 
   &__logo {
     grid-column: 1 / -1;
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include on-tablet {
       grid-row: 1;
