--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -20,6 +20,7 @@
   }
 
   &__link {
+    display: flex;
     text-decoration: none;
     color: #1C1A26;
     font-weight: 400;
@@ -27,6 +28,10 @@
     line-height: 150%;
     letter-spacing: -0.16px;
     text-align: center;
+    transition: transform 0.3s;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__link--contact {
