--- a/src/styles/blocks/products-card.scss
+++ b/src/styles/blocks/products-card.scss
@@ -11,6 +11,7 @@
   &__photo {
     width: 288px;
     height: 356px;
+    border-radius: 8px;
 
     @include on-tablet {
       width: 328px;
@@ -19,7 +20,7 @@
 
     @include on-desktop {
       width: 100%;
-      height: 100%;
+      height: 80%;
     }
   }
 
@@ -42,6 +43,7 @@
       line-height: 150%;
       letter-spacing: -0.16px;
       color: #1C1A26;
+
     }
   }
 
@@ -58,6 +60,12 @@
     line-height: 100%;
     letter-spacing: 0.32px;
     color: #F9512E;
+
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
