add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -63,6 +63,7 @@
       color: $colorTextWhite;
       text-decoration: none;
 
+      @include body-text;
       @include hover-text(transform, scale(1.2));
     }
   }
@@ -123,6 +124,7 @@
         color: $colorTextWhite;
         text-decoration: none;
 
+        @include body-text;
         @include hover-text(transform, scale(1.2));
       }
     }
@@ -149,6 +151,7 @@
         color: $colorTextWhite;
         text-decoration: none;
 
+        @include body-text;
         @include hover-text(transform, scale(1.2));
       }
     }
