add task solution

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,72 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Inter, sans-serif;
   font-weight: 400;
+  font-size: 144px;
+  line-height: 0.85;
+  letter-spacing: -0.03em;
+  color: $main-color;
+  text-transform: uppercase;
+  margin: 0;
+
+  @include on-large-desktop {
+    font-size: 136px;
+  }
+
+  @include on-small-desktop {
+    font-size: 80px;
+  }
+
+  @include on-phone {
+    font-size: 64px;
+  }
+}
+
+%h2 {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 0.85;
+  letter-spacing: -0.05em;
+  color: $main-color;
+  text-transform: uppercase;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-phone {
+    font-size: 48px;
+  }
+}
+
+%main-text {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: -0.01em;
+  color: $main-color;
+  margin: 0;
+}
+
+%secondary-text {
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+  letter-spacing: 0.02em;
+  color: $accent-color;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+%big-text {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 96px;
+  line-height: 0.85;
+  color: $main-color;
+  margin: 0;
+  text-transform: uppercase;
 }
