--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$main-color: #1c1a26;
+$secondary-color: #7f8096;
+$bg-color: #eef7ff;
+$accent-color: #f9512e;
+$accent-dark-color: #b2341a;
+$accent-light-color: #fba28f;
+$white-color: #fff;
