--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,61 @@
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
+
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin focus($_property, $_toValue) {
+  transition: #{$_property} 0.3s;
+
+  &:focus {
+    #{$_property}: $_toValue;
+  }
+}
+
+@mixin disabled($_property, $_toValue) {
+  transition: #{$_property} 0.3s;
+
+  &:disabled {
+    #{$_property}: $_toValue;
+  }
+}
+
+@mixin on-large-desktop {
+  @media (max-width: 1439.98px) {
+    @content;
+  }
+}
+
+@mixin on-small-desktop {
+  @media (max-width: 1199.98px) {
+    @content;
+  }
+}
+
+@mixin on-tablet {
+  @media (max-width: 1023.98px) {
+    @content;
+  }
+}
+
+@mixin on-phone {
+  @media (max-width: 767.98px) {
+    @content;
+  }
+}
+
+@mixin grid {
+  --columns: 8;
+
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  column-gap: 24px;
+
+  @include on-phone {
+    --columns: 2;
+
+    column-gap: 16px;
   }
 }
