--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,11 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin title-h3 {
+  margin: 0;
+  color: #7f8096;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 2%;
+}
