--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,16 @@
+@import 'utils';
+@import 'fonts';
+@import 'typography';
+@import 'utils/mixins';
+
 @import 'blocks/page';
 @import 'blocks/header';
 @import 'blocks/icon';
 @import 'blocks/menu';
 @import 'blocks/nav';
 @import 'blocks/top-bar';
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+@import 'blocks/products';
+@import 'blocks/grid';
+@import 'blocks/section';
+@import 'blocks/about';
+@import 'blocks/footer';
