add task solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -12,7 +12,7 @@
 
   @include on-desktop {
     padding-top: 28px;
-    margin-bottom: 152px;
+    padding-bottom: 152px;
     background-image: url(../images/cookie-img.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -157,8 +157,8 @@
       }
 
       @include on-big-desktop {
-        width: 280px;
-        margin-bottom: 40px;
+        width: 223px;
+        margin-bottom: 44px;
       }
     }
 
