--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,15 +1,16 @@
-/* @import 'utils';
-@import 'fonts';
-@import 'typography'; */
-
 .page {
   font-family: Inter, sans-serif;
   font-size: 16px;
   font-weight: 400;
   background: #eef7ff;
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
   }
 
   &__menu {
