--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -103,6 +103,7 @@
   }
 
   &__button {
+    text-decoration: none;
     grid-column: 1 / 3;
     color: #f9512e;
     font-weight: 500;
@@ -136,6 +137,11 @@
       background-repeat: no-repeat;
       background-position: 50%;
       background-size: cover;
+    }
+
+    &:hover {
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      transition: all 0.3s ease;
     }
   }
 }
