--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   opacity: 0;
   background-color: #eef7ff;
+  z-index: 100;
 
   &__logo {
     padding: 16px;
@@ -12,8 +13,4 @@
     width: 136px;
     height: 32px;
   }
-
-  // &__content {
-  //   position: relative;
-  // }
 }
