--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -25,7 +25,6 @@
     grid-column: 1 / 3;
 
     @media (min-width: 640px) {
-      padding: 0 0 80px;
       grid-column: 1 / 9;
     }
   }
@@ -63,6 +62,20 @@
 
     @media (min-width: 640px) {
       padding: 0 0 80px;
+    }
+  }
+
+  &__picture {
+    &:hover {
+      transform: scale(1.03);
+      transition: transform 0.3s ease;
+    }
+  }
+
+  &__button {
+    &:hover {
+      transform: translateX(3px);
+      transition: all 0.3s ease;
     }
   }
 }
