--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,21 @@
-@import 'utils/vars';
-@import 'utils/mixins';
-@import 'utils/extends';
+// .container {
+//   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+//   margin-inline: auto;
+//   padding-inline: var(--container-padding-x);
+// }
+
+// .visually-hidden {
+//   @include visually-hidden;
+// }
+
+// .hidden-mobile {
+//   @include mobile {
+//     display: none !important;
+//   }
+// }
+
+// .visible-mobile {
+//   @include mobile-above {
+//     display: none !important;
+//   }
+// }
