--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,3 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'normalize', 'media', 'mixins', 'variables', 'globals';
+@import 'blocks/header', 'blocks/hero', 'blocks/products', 'blocks/about-us',
+  'blocks/footer', 'blocks/mobile-overlay';
