Add animation for socials icons

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -10,9 +10,27 @@
     @media (min-width: 1024px) {
       display: none;
     }
+
+    &:hover {
+      @include hover(opacity, 0.7);
+    }
   }
 
   &--close {
     background-image: url(../images/icons/Icon-close.png);
+
+    &:hover {
+      @include hover(opacity, 0.7);
+    }
+  }
+
+  &--socials svg {
+    color: #f9512e;
+    transition: fill 0.3s ease;
+
+    &:hover,
+    &:focus {
+      color: white;
+    }
   }
 }
