--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -37,6 +37,10 @@
   }
 
   &__item {
+    &:hover {
+      @include hover(opacity, 0.7);
+    }
+
     &--aside {
       padding-bottom: 24px;
     }
