--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -12,6 +12,12 @@
     }
   }
 
+  &__logo {
+    &:hover {
+      @include hover(opacity, 0.7);
+    }
+  }
+
   &__menu {
     grid-column: 1 / 3;
     padding-bottom: 64px;
@@ -81,6 +87,15 @@
     }
   }
 
+  &__email {
+    text-decoration: none;
+    color: white;
+
+    &:hover {
+      @include hover(opacity, 0.7);
+    }
+  }
+
   &__socials {
     display: flex;
     flex-direction: row;
@@ -109,6 +124,10 @@
     text-decoration: none;
     color: white;
     cursor: pointer;
+
+    &:hover {
+      @include hover(opacity, 0.7);
+    }
   }
 
   &__copyright {
