--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/header/header';
+@import './blocks/header/header-desktop';
+@import './blocks/header/menu';
+@import './blocks/main/main';
+@import './blocks/main/hero';
+@import './blocks/main/products';
+@import './blocks/main/about';
+@import './blocks/footer/footer';
