--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,11 @@
+body {
+  margin: 0;
+  position: relative;
+  background-color: $light-blue;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+}
+
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-weight: 400;
 }
