add ready landing

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,37 @@
-%h1 {
-  font-family: Roboto, sans-serif;
+%heading-text {
+  font-family: Inter, serif;
   font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  color: $black;
+}
+
+%body-text {
+  font-family: Inter, serif;
+  font-weight: 400;
+  line-height: 150%;
+  color: $black;
+}
+
+%big-text {
+  font-family: Inter, serif;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  font-size: 96px;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+%burger-line {
+  content: '';
+  width: 20px;
+  height: 2px;
+  background-color: $black;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: transform $transition-duration;
 }
