--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,31 @@
 h1 {
-  @extend %h1;
+  @extend %heading-text;
+
+  font-size: 64px;
+
+  @include on-tablet {
+    font-size: 80px;
+  }
+
+  @include on-laptop {
+    font-size: 136px;
+  }
+
+  @include on-desktop {
+    font-size: 144px;
+  }
+}
+
+h2 {
+  @extend %heading-text;
+
+  font-size: 48px;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-laptop {
+    font-size: 72px;
+  }
 }
