--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,22 @@
 @import 'fonts';
 @import 'typography';
 
-body {
-  background: $c-gray;
+html {
+  scroll-behavior: smooth;
 }
+
+@import './blocks/page';
+@import './blocks/container';
+@import './blocks/icon';
+@import './blocks/button';
+@import './blocks/burger';
+@import './blocks/menu';
+@import './blocks/header';
+@import './blocks/sidebar';
+@import './blocks/main';
+@import './blocks/hero';
+@import './blocks/product-card';
+@import './blocks/what-we-bake';
+@import './blocks/statistic-card';
+@import './blocks/about-us';
+@import './blocks/footer';
