--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+@import './utils/mixins';
+@import './utils/vars';
+@import './container';
+@import './header';
+@import './topbar';
+@import './page';
 
-body {
-  background: $c-gray;
-}
+
