--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,21 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on-tablet {
+  @media (min-width: $on-tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $on-desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin on-tv {
+  @media (min-width: $on-tv-min-width) {
+    @content;
+  }
+}
