Fixed the hero__button text in _hero.scss, removing the <p> tag and inserting the text using CSS style using ::after.

--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -60,6 +60,22 @@
     &:focus .hero__button-text {
       transform: scale(1.1);
     }
+
+    &::after {
+      content: 'learn more';
+      font-size: 16px;
+      color: $color-accent-orange;
+      margin-right: 8px;
+      display: inline-block;
+      vertical-align: middle;
+      transition: transform 0.3s ease;
+    }
+
+    &:hover::after,
+    &:focus::after {
+      color: $color-white;
+      transform: scale(1.1);
+    }
   }
 
   @include respond(tablet) {
