implemented products section

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -29,8 +29,12 @@
   }
   &--cookie {
     background-image: url(../images/icons/icon-cookie.svg);
-    position: absolute;
-    bottom: auto;
-    right: 75%;
+
+    @include hover(transform, none);
+  }
+  &--arrow {
+    background-image: url(../images/icons/icon-arrow.svg);
+
+    @include hover(transform, translateX(5px));
   }
 }
