--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -4,3 +4,7 @@
 @import 'blocks/icon';
 @import 'blocks/menu';
 @import 'blocks/nav';
+@import 'blocks/main';
+@import 'blocks/section';
+@import 'blocks/products';
+@import 'blocks/product';
