--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,10 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+
+    @include on-desktop {
+      height: 100%;
+    }
   }
   &__hero-block {
     display: flex;
@@ -12,7 +16,7 @@
     position: relative;
 
     @include on-tablet {
-      padding-block: 80px;
+      padding-block: 80px 0;
     }
 
     @include on-desktop {
@@ -101,6 +105,20 @@
     }
   }
   &__btn-learn {
+    font-family: Inter, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: $text-secondary-color;
+  }
+  &__btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 4px;
+
     box-sizing: border-box;
     padding: 0;
     width: 100%;
@@ -109,30 +127,32 @@
     border-radius: 32px;
     border: 2px solid $text-secondary-color;
     background-color: transparent;
-    cursor: pointer;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Inter, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    color: $text-secondary-color;
     text-decoration: none;
-    position: relative;
     transition: all 0.3s;
 
     &:hover {
       background-color: $text-secondary-color;
-      color: #fff;
+
+      .icon {
+        background-image: url(../images/icons/icon-cookie-hover.svg);
+      }
+
+      .header__btn-learn {
+        color: #fff;
+      }
     }
 
     &:active {
+      border: 2px solid #b2341a;
       background-color: #b2341a;
-      color: #fff;
+
+      .icon {
+        background-image: url(../images/icons/icon-cookie-hover.svg);
+      }
+
+      .header__btn-learn {
+        color: #fff;
+      }
     }
 
     @include on-desktop {
