--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -45,3 +45,17 @@
 .container {
   @include content-padding-inline;
 }
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  column-gap: 16px;
+
+  @include on-tablet {
+    --columns: 8;
+
+    column-gap: 24px;
+  }
+}
