implemented about section

--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -8,6 +8,18 @@
     @include on-tablet {
       margin-bottom: 80px;
     }
+    &--column {
+      row-gap: 32px;
+      margin-bottom: 64px;
+
+      @include on-tablet {
+        margin-bottom: 72px;
+      }
+
+      @include on-desktop {
+        margin-bottom: 144px;
+      }
+    }
   }
   &__title {
     margin: 0;
@@ -18,6 +30,10 @@
     letter-spacing: -3px;
     text-transform: uppercase;
     color: $text-secondary-color;
+
+    &--column {
+      grid-column: span 4;
+    }
 
     @include on-tablet {
       font-size: 56px;
@@ -31,5 +47,9 @@
   &__subtitle {
     margin: 0;
     grid-column: 1 / -1;
+
+    &--column {
+      grid-column: span 4;
+    }
   }
 }
