--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -8,3 +8,5 @@
 @import 'blocks/section';
 @import 'blocks/products';
 @import 'blocks/product';
+@import 'blocks/about';
+@import 'blocks/statistic';
