--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,11 @@
 @import './utils/mixins';
 @import './utils/vars';
-@import './container';
+@import './icon';
 @import './header';
-@import './topbar';
+@import './nav.scss';
 @import './page';
-
+@import './menu';
+@import './sections';
+@import './products';
+@import './mainh';
 
