--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,12 +1,35 @@
-body {
-  margin: 0;
-  padding: 0;
+.page {
   font-family: $main-font;
   font-weight: 400;
   background-color: $main-bg-color;
   color: $main-text-color;
+  scroll-behavior: smooth;
+  font-size: 16px;
+
+  &__body {
+  margin: 0;
+  padding: 0;
 }
+
+  &__menu{
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    pointer-events: none;
+
+    &:target {
+      opacity: 1;
+      pointer-events: all;
+    }
+  }
+}
+
+
 
 *{
   box-sizing: border-box;
 }
+
+
