--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,44 +1,160 @@
 .header {
-  height: 100vh;
-  background-image: url(/src/images/BigCookie.png);
-  background-repeat: no-repeat;
-  background-size: 586px 584px;
-  background-position: center;
+  @include contentPaddingInline;
 
-    &__title-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    white-space: nowrap;
+  height: 100vh;
+
+  &__top {
+    height: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+
+  &__logo--wrapper {
+    width: 136px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__logo--link {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 
   &__content {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+
+    @include on-tablet {
+      background-image: url(../images/BigCookie.png);
+      background-position: center;
+      background-size: 328px 326px;
+      background-repeat: no-repeat;
+    }
+
+    @include on-desktop {
+      background-size: 550px 550px;
+      margin-top: 100px;
+    }
+
+    @include on-tv {
+      background-size: 586px 584px;
+    }
   }
 
+  &__discription {
+    padding-bottom: 16px;
+
+    @include on-tablet {
+      text-align: left;
+      align-self: flex-start;
+      padding-top: 80px;
+      padding-bottom: 16px;
+      max-width: 290px;
+    }
+
+
+  }
+
+  &__visual {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+}
+
   &__title {
-    font-size: 144px;
     font-weight: 400;
+    font-size: 64px;
     line-height: 85%;
-    letter-spacing: -5%;
     text-transform: uppercase;
+    letter-spacing: -5%;
     text-align: center;
+    margin: 0;
+
+
+    @include on-tablet {
+      font-size: 75px;
+      white-space: nowrap;
+
+    }
+
+    @include on-desktop {
+      font-size: 116px;
+      position: relative;
+    }
+
+    @include on-tv {
+      font-size: 144px;
+      position: relative;
+    }
+  }
+
+  &__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    z-index: -1;
+
+    @include on-tablet {
+      display: none;
+    }
+  }
+
+  &__img-link {
+    max-width: 288px;
+    height: auto;
+    display: block;
+
+    @include on-tablet {
+      max-width: 326px;
+      height: auto;
+    }
   }
 
   &__button {
-    padding: 20px 77px;
-    border:  2px solid rgba(249, 81, 46, 1);
-    border-radius: 32px;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     gap: 4px;
+    padding: 20px 77px;
+    border: 2px solid rgba(249, 81, 46, 1);
+    border-radius: 32px;
     width: fit-content;
-    cursor: pointer;
+
+    @include on-tablet {
+      padding: 20px 96px;
+      margin-top: 80px;
+    }
+
+    @include on-desktop {
+      padding: 20px 63px;
+      align-self: flex-start;
+      margin-top: 64px;
+
+    }
+    @include on-tv {
+      padding: 20px 73px;
+      align-self: flex-start;
+    }
+  }
+
+  &__learn {
+    text-transform: uppercase;
     font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 2%;
     text-decoration: none;
+    color: rgba(249, 81, 46, 1);
   }
 
 }
+
+
