implemented footer section and finished landing

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -32,9 +32,35 @@
 
     @include hover(transform, none);
   }
+  &--phone {
+    background-image: url(../images/icons/icon-phone.svg);
+
+    @include hover(transform, none);
+  }
   &--arrow {
     background-image: url(../images/icons/icon-arrow.svg);
 
     @include hover(transform, translateX(5px));
+  }
+  &--facebook {
+    background-image: url(../images/icons/icon-facebook.svg);
+
+    &:hover {
+      background-image: url(../images/icons/icon-facebook-hover.svg);
+    }
+  }
+  &--instagram {
+    background-image: url(../images/icons/icon-instagram.svg);
+
+    &:hover {
+      background-image: url(../images/icons/icon-instagram-hover.svg);
+    }
+  }
+  &--twitter {
+    background-image: url(../images/icons/icon-twitter.svg);
+
+    &:hover {
+      background-image: url(../images/icons/icon-twitter-hover.svg);
+    }
   }
 }
