--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -31,10 +31,7 @@
     transition: all 0.3s;
     transform: none;
 
-    &:hover {
-      color: $text-secondary-color;
-      transform: scale(1.2);
-    }
+    @include hover(color, $text-secondary-color);
 
     @include on-tablet {
       font-size: 32px;
@@ -43,5 +40,22 @@
     @include on-desktop {
       font-size: 18px;
     }
+
+    &--highlight {
+      display: flex;
+      align-items: center;
+      column-gap: 4px;
+
+      @include hover(transform, scale(1.2));
+    }
+  }
+
+  &__link-text {
+    color: $text-secondary-color;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
   }
 }
