--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
+@import 'header';
+@import 'hero';
+@import 'products';
+@import 'about';
+@import 'footer';
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  margin: 0;
+  padding-top: $header-height;
+  background: $c-light-blue;
 }
