--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,59 @@
-%h1 {
-  font-family: Roboto, sans-serif;
+@mixin h1-desktop {
+  font-family: Inter, sans-serif;
+  font-size: 144px;
   font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+}
+
+@mixin h2-desktop {
+  font-family: Inter, sans-serif;
+  font-size: 72px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+}
+
+@mixin h1-tablet {
+  font-family: Inter, sans-serif;
+  font-size: 80px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+}
+
+@mixin h2-tablet {
+  font-family: Inter, sans-serif;
+  font-size: 56px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+}
+
+@mixin h1-mobile {
+  font-family: Inter, sans-serif;
+  font-size: 64px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
+}
+
+@mixin h2-mobile {
+  font-family: Inter, sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 85%;
+  text-transform: uppercase;
+  letter-spacing: -0.05em;
 }
