--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,18 @@
 $c-gray: #eee;
+$c-white: #fff;
+$c-black: #000;
+$c-orange: #f9512e;
+$c-light-blue: #eef7ff;
+$c-dark: #1c1a26;
+$tablet-min: 640px;
+$desktop-min: 1200px;
+$mobile-margin: 16px;
+$mobile-gutter: 16px;
+$tablet-margin: 44px;
+$tablet-gutter: 24px;
+$desktop-column-width: 128px;
+$desktop-gutter: 24px;
+$desktop-max-width: 1192px;
+$header-height: 60px;
+$nav-gap-desktop: 64px;
+$nav-gap-mobile: 24px;
