--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -1,12 +1,27 @@
 section {
   @include contentPaddingInline;
+
 }
 
 .section__title {
-  font-size: 72px;
+  font-size: 48px;
   line-height: 85%;
   text-transform: uppercase;
   font-weight: 400;
   margin: 0;
-  margin-bottom: 24px;
+
+  @include on-tablet {
+    font-size: 56px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
 }
+
+.section__p {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+}
+
