--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -3,11 +3,76 @@
   flex-direction: column;
   gap: 56px;
 
-   @include on-tablet {
+  &__grid {
     @include page-grid;
 
-    gap: 56px;
+    column-gap: 56px;
+    row-gap: 56px;
+
+    @include on-tablet {
+      row-gap: 80px;
+    }
+  }
+  }
+
+
+.product__card {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  grid-column: span 2;
+
+   @include on-tablet {
+    grid-column: span 4;
+  }
+
+  @include on-desktop {
+    grid-column: span 3;
   }
 }
 
+.product {
+  &__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    margin-bottom: 8px;
+  }
+
+  &__class {
+    font-weight: 500;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: rgba(127, 128, 150, 1);
+  }
+
+  &__description {
+    font-size: 16px;
+  }
+
+  &__button {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    &-text {
+      text-decoration: none;
+      text-transform: uppercase;
+      color: rgba(249, 81, 46, 1);
+    }
+  }
+}
+
+.product__card:nth-child(3) {
+  @include on-desktop {
+    grid-column: 3 / 6;
+  }
+}
+
+.product__card:nth-child(4) {
+  @include on-desktop {
+    grid-column: 6 / 9;
+  }
+}
 
