--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -4,6 +4,8 @@
   height: 24px;
   display: block;
 
+  @include hover(transform, scale(1.2));
+
   @include on-desktop {
     display: none;
   }
@@ -17,6 +19,8 @@
   width: 24px;
   height: 24px;
   display: block;
+
+  @include hover(transform, scale(1.2));
 
   @include on-desktop {
     display: none;
