--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,21 +1,14 @@
 .menu {
-  padding-inline: 16px;
   background-color: $main-bg-color;
   height: 100vh;
+
+  @include content-padding-inline;
 
   &__top {
     height: 64px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-
-  @include on-desktop {
-    padding-inline: 32px;
-  }
-
-  @include on-tv {
-    padding-inline: 32px;
   }
 
   &__logo--wrapper {
@@ -25,7 +18,7 @@
     align-items: center;
   }
 
-  &__logo--link {
+  &__logo-link {
   width: 100%;
   height: 100%;
   object-fit: contain;
