--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -6,8 +6,7 @@
   &__grid {
     @include page-grid;
 
-    column-gap: 56px;
-    row-gap: 56px;
+    gap: 56px;
 
     @include on-tablet {
       row-gap: 80px;
@@ -38,6 +37,8 @@
     height: 100%;
     border-radius: 8px;
     margin-bottom: 8px;
+
+    @include hover(transform, scale(1.05));
   }
 
   &__class {
@@ -55,6 +56,8 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+
+    @include hover(transform, translateX(10px));
 
     &-text {
       text-decoration: none;
