--- a/src/styles/utils/vars.scss
+++ b/src/styles/utils/vars.scss
@@ -5,4 +5,6 @@ $main-text-color: rgba(28, 26, 38, 1);
 $on-tablet-min-width: 640px;
 $on-desktop-min-width: 1024px;
 $on-tv-min-width: 1200px;
-
+$main-hover-color: rgba(249, 81, 46, 1);
+$main-focus-color: rgba(178, 52, 26, 1);
+$main-transition-time: 0.5s;
