--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,15 @@
 .header {
-  @include contentPaddingInline;
+  @include content-padding-inline;
 
+  margin-bottom: 64px;
 
+  @include on-desktop {
+    margin-bottom: 0;
+  }
+
+  @include on-tablet {
+    margin-bottom: 152px;
+  }
 
   min-height: 100vh;
 
@@ -13,14 +21,20 @@
     margin-bottom: 20px;
   }
 
-  &__logo--wrapper {
+  &__start {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+  }
+
+  &__logo-wrapper {
     width: 136px;
     height: 32px;
     display: flex;
     align-items: center;
   }
 
-  &__logo--link {
+  &__logo-link {
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -33,19 +47,24 @@
     text-align: center;
 
     @include on-tablet {
-      background-image: url(../images/BigCookie.png);
-      background-position: center;
-      background-size: 328px 326px;
-      background-repeat: no-repeat;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
     }
 
     @include on-desktop {
+      background-image: url(../images/BigCookie.png);
+      background-position: center;
       background-size: 550px 550px;
       margin-top: 100px;
+      background-repeat: no-repeat;
+      position: relative;
     }
 
     @include on-tv {
       background-size: 586px 584px;
+      position: relative;
     }
   }
 
@@ -58,6 +77,11 @@
       padding-top: 80px;
       padding-bottom: 16px;
       max-width: 290px;
+      margin-left: 44px;
+    }
+
+    @include on-desktop {
+      margin-left: 0;
     }
 
 
@@ -84,7 +108,8 @@
     @include on-tablet {
       font-size: 75px;
       white-space: nowrap;
-
+      position: absolute;
+      top: 50%;
     }
 
     @include on-desktop {
@@ -107,6 +132,10 @@
     z-index: -1;
 
     @include on-tablet {
+      position: relative;
+    }
+
+    @include on-desktop {
       display: none;
     }
   }
@@ -130,6 +159,37 @@
     border: 2px solid rgba(249, 81, 46, 1);
     border-radius: 32px;
     width: fit-content;
+    cursor: pointer;
+    transform: color $main-transition-time ;
+
+    @include hover(background-color, $main-hover-color);
+
+    &-cookie {
+      background-image: url(../images/Icon-cookie.png);
+      background-position: center;
+      background-size: 24px 24px;
+      width: 24px;
+      height: 24px;
+    }
+
+    &-learn {
+      text-transform: uppercase;
+      font-weight: 500;
+      font-size: 16px;
+      letter-spacing: 2%;
+      text-decoration: none;
+      color: rgba(249, 81, 46, 1);
+    }
+
+  &:hover {
+    .header__button-cookie {
+      background-image: url(../images/Icon-cookie-wh.png);
+    }
+
+    .header__button-learn {
+      color: white;
+    }
+  }
 
     @include on-tablet {
       padding: 20px 96px;
@@ -142,21 +202,12 @@
       margin-top: 64px;
 
     }
+
     @include on-tv {
       padding: 20px 73px;
       align-self: flex-start;
     }
   }
-
-  &__learn {
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 2%;
-    text-decoration: none;
-    color: rgba(249, 81, 46, 1);
-  }
-
 }
 
 
