splitted scss components, added map files to gitignore, used classes instead of tags

--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -58,8 +58,15 @@ strong {
   font-weight: bold;
 }
 
+li {
+  list-style: none;
+}
+
 html,
 body {
+  font-family: Inter, sans-serif;
+  box-sizing: border-box;
+  background: $light_blue;
   margin: 0;
   padding: 0;
 }
